Dependency management update
- including dependencies to pom.xml files only where they are used,
avoiding extra dependencies being added in all packages.
- removal of unused UEB topic.

Issue-ID: POLICY-4945
Change-Id: Ifc0212af2bc938e357e1addebcec591f9d6cfc14
Signed-off-by: adheli.tavares <adheli.tavares@est.tech>